# data-transport

./: .gitignore  README.md  mongo.json  pyproject.toml  requirements.txt  setup.py  transport.py  version.py
info/: __init__.py
notebooks/: bigquery.ipynb  etl.ipynb  iceberg.ipynb  mongodb.ipynb  mssqlserver.ipynb  mysql.ipynb  plugins.ipynb  postgresql.ipynb  s3.ipynb  sqlite.ipynb
transport/: __init__.py  bricks.py  common.py  couch.py  disk.py  duck.py  etl.py  info.py  iowrapper.py  mongo.py  nextcloud.py  providers.py  qlistener.py  queue.py  rabbitmq.py  registry.py  s3.py  session.py  sql.py  version.py
transport/cloud/: __init__.py  bigquery.py  databricks.py  nextcloud.py  s3.py
transport/nosql/: __init__.py  couchdb.py  mongodb.py
transport/other/: __init__.py  callback.py  console.py  files.py  http.py  rabbitmq.py
transport/plugins/: __init__.py
transport/providers/: __init__.py
transport/sql/: __init__.py  common.py  duckdb.py  mysql.py  netezza.py  postgresql.py  sqlite.py  sqlserver.py
transport/warehouse/: __init__.py  drill.py  iceberg.py
